--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework:spring-tx:5.3.2'
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.2'
 	implementation 'com.google.guava:guava:23.0'
